# pvr.hts

./: .clang-format  .gitignore  .travis.yml  0001-add-initial-functions-for-instance-handling-currentl.patch  0002-change-libXBMC_codec-to-libXBMC_pvr.patch  0003-Remove-no-more-used-void-ADDON_Stop.patch  0004-change-travis-to-kodi-agile-repo.patch  0005-Fix-agile-on-travis.patch  0006-remove-old-get-version-functions.patch  0007-API-Version-increase.patch  0008-Change-GetAddonCapabilities-to-void-GetCapabilities.patch  0009-Update-travis-build-files.patch  0010-Change-xbmc.pvr-to-kodi.pvr.patch  CMakeLists.txt  Makefile.am  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
addon/: addon.xml  addon.xml.in  changelog.txt
addon/resources/: settings.xml
addon/resources/language/Afrikaans/: strings.po
addon/resources/language/Albanian/: strings.po
addon/resources/language/Amharic/: strings.po
addon/resources/language/Arabic/: strings.po
addon/resources/language/Armenian/: strings.po
addon/resources/language/Azerbaijani/: strings.po
addon/resources/language/Basque/: strings.po
addon/resources/language/Belarusian/: strings.po
addon/resources/language/Bosnian/: strings.po
addon/resources/language/Bulgarian/: strings.po
addon/resources/language/Burmese/: strings.po
addon/resources/language/Catalan/: strings.po
addon/resources/language/Chinese (Simple)/: strings.po
addon/resources/language/Chinese (Traditional)/: strings.po
addon/resources/language/Croatian/: strings.po
addon/resources/language/Czech/: strings.po
addon/resources/language/Danish/: strings.po
addon/resources/language/Dutch/: strings.po
addon/resources/language/English/: strings.po
addon/resources/language/English (Australia)/: strings.po
addon/resources/language/English (New Zealand)/: strings.po
addon/resources/language/English (US)/: strings.po
addon/resources/language/Esperanto/: strings.po
addon/resources/language/Estonian/: strings.po
addon/resources/language/Faroese/: strings.po
addon/resources/language/Finnish/: strings.po
addon/resources/language/French/: strings.po
addon/resources/language/French (Canada)/: strings.po
addon/resources/language/Galician/: strings.po
addon/resources/language/Georgian/: strings.po
addon/resources/language/German/: strings.po
addon/resources/language/Greek/: strings.po
addon/resources/language/Haitian (Haitian Creole)/: strings.po
addon/resources/language/Hebrew/: strings.po
addon/resources/language/Hindi (Devanagiri)/: strings.po
addon/resources/language/Hungarian/: strings.po
addon/resources/language/Icelandic/: strings.po
addon/resources/language/Indonesian/: strings.po
addon/resources/language/Italian/: strings.po
addon/resources/language/Japanese/: strings.po
addon/resources/language/Korean/: strings.po
addon/resources/language/Latvian/: strings.po
addon/resources/language/Lithuanian/: strings.po
addon/resources/language/Macedonian/: strings.po
addon/resources/language/Malay/: strings.po
addon/resources/language/Malayalam/: strings.po
addon/resources/language/Maltese/: strings.po
addon/resources/language/Maori/: strings.po
addon/resources/language/Thai/: strings.po
debian/: changelog  changelog.in  control  copyright  kodi-pvr-hts.install  rules
depends/common/p8-platform/: 0001-fixed-uwp-build.patch  0002-StringUtils-fix-build-with-cpp17.patch  01-fix.patch  p8-platform.sha256  p8-platform.txt
lib/libhts/: CMakeLists.txt  htsmsg.c  htsmsg.h
lib/libhts/Win32/: libhts_2010.vcxproj  libhts_2010.vcxproj.filters
project/VS2010Express/: pvrclient_tvheadend.vcxproj  pvrclient_tvheadend.vcxproj.filters
pvr.hts/: addon.xml  addon.xml.in  changelog.txt
pvr.hts/resources/: instance-settings.xml  settings.xml
src/: AsyncState.cpp  AsyncState.h  AutoRecordings.cpp  AutoRecordings.h  CircBuffer.cpp  CircBuffer.h  DialogTranscodeSettings.cpp  DialogTranscodeSettings.h  GUIDialogTranscode.cpp  GUIDialogTranscode.h  HTSPConnection.cpp  HTSPConnection.h  HTSPData.cpp  HTSPData.h  HTSPDemux.cpp  HTSPDemux.h  HTSPDemuxer.cpp  HTSPDemuxer.h  HTSPMessage.h  HTSPTypes.cpp  HTSPTypes.h  HTSPVFS.cpp  HTSPVFS.h  IHTSPConnectionListener.h  Settings.h  TimeRecordings.cpp  TimeRecordings.h  Tvheadend.cpp  Tvheadend.h  addon.cpp  addon.h  client.cpp  client.h  xbmc_codec_descriptor.hpp
src/aac/: BitStream.cpp  BitStream.h  Decoder.cpp  Decoder.h  Profile.h  SampleFrequency.h
src/aac/elements/: CCE.cpp  CCE.h  CPE.cpp  CPE.h  DSE.cpp  DSE.h  FIL.cpp  FIL.h  ICS.cpp  ICS.h  ICSInfo.cpp  ICSInfo.h  LFE.cpp  LFE.h  PCE.cpp  PCE.h  SCE.cpp  SCE.h
src/aac/huffman/: Codebooks.h  Decoder.cpp  Decoder.h
src/tvheadend/: AddonSettings.cpp  AddonSettings.h  AutoRecordings.cpp  AutoRecordings.h  ChannelTuningPredictor.cpp  ChannelTuningPredictor.h  CustomTimerProperties.cpp  CustomTimerProperties.h  HTSPConnection.cpp  HTSPConnection.h  HTSPDemuxer.cpp  HTSPDemuxer.h  HTSPMessage.h  HTSPTypes.h  HTSPVFS.cpp  HTSPVFS.h  IHTSPConnectionListener.h  IHTSPDemuxPacketHandler.h  InstanceSettings.cpp  InstanceSettings.h  Profile.h  Settings.cpp  Settings.h  Subscription.cpp  Subscription.h  TimeRecordings.cpp  TimeRecordings.h  xbmc_codec_descriptor.hpp
src/tvheadend/entity/: AutoRecording.cpp  AutoRecording.h  Channel.h  Entity.h  Event.cpp  Event.h  Provider.h  Recording.h  RecordingBase.cpp  RecordingBase.h  Schedule.cpp  Schedule.h  SeriesRecordingBase.cpp  SeriesRecordingBase.h  Tag.cpp  Tag.h  TimeRecording.cpp  TimeRecording.h
src/tvheadend/htsp/: Event.h  Response.cpp  Response.h  ServerInformation.cpp  ServerInformation.h
src/tvheadend/status/: DescrambleInfo.cpp  DescrambleInfo.h  Quality.h  QueueStatus.h  SourceInfo.h  TimeshiftStatus.h
src/tvheadend/utilities/: AsyncState.cpp  AsyncState.h  LifetimeMapper.h  LocalizedString.h  Logger.cpp  Logger.h  RDSExtractor.cpp  RDSExtractor.h  SettingsMigration.cpp  SettingsMigration.h  SyncedBuffer.h  TCPSocket.cpp  TCPSocket.h  UrlHelper.cpp  UrlHelper.h  Utilities.h
(+143 files in other folders)
